fixing z-index alert and info-text

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -167,7 +167,7 @@ a.btn-primary:hover{
     width: 20px;
     text-align: center;
     vertical-align: middle;
-    z-index: 100;
+    z-index: 2;
 }
 
 .info-btn:hover + .info-text{
@@ -187,7 +187,7 @@ a.btn-primary:hover{
     opacity: 0;
     position: absolute;
     transition: opacity 0.3s;
-    z-index: 2;
+    z-index: 99;
 }
 
 .info-text:after{
@@ -233,6 +233,7 @@ a.btn-primary:hover{
     box-shadow: 0 6px 20px -5px rgba(0, 0, 0, 0.1);
     padding: 5px 20px 5px 10px;
     overflow: hidden;
+    z-index: 100;
 }
 
 .alert-msg{
